--- a/demo_model/Dockerfile
+++ b/demo_model/Dockerfile
@@ -1,4 +1,16 @@
+#MAINTANER Elora Schörverth "elora.schoerverth@hhi.fraunhofer.de"
 FROM ubuntu:18.04
 
-RUN mkdir /code
-COPY model/model.pkl /code
+RUN apt-get update -y && \
+    apt-get install -y python-pip python-dev
+
+# We copy just the requirements.txt first to leverage Docker cache
+COPY ./requirements.txt /app/requirements.txt
+
+WORKDIR /app
+
+RUN pip install flask
+
+COPY . /app
+
+CMD [ "python", "./app.py" ]
